<resources>
    <string name="app_name">ProjetMobile</string>

    <!-- activity_main -->
    <string name="Pseudo" translatable="false">Pseudo:</string>
    <string name="PseudoName">Joueur1</string>
f
    <string name="PlayButton">Jouer</string>
    <string name="ScoreButton">Score</string>
    <string name="AboutButton">A propos</string>

    <!-- activity_play -->
    <string name="ScoreText" translatable="false">Score:</string>
    <string name="ScoreValue" translatable="false">0</string>

    <string name="CalculationAccuracy">Arrondir les résultats au centième pour les calculs dépassant deux décimales.</string>

    <string name="NUMBER_0" translatable="false">0</string>
    <string name="NUMBER_1" translatable="false">1</string>
    <string name="NUMBER_2" translatable="false">2</string>
    <string name="NUMBER_3" translatable="false">3</string>
    <string name="NUMBER_4" translatable="false">4</string>
    <string name="NUMBER_5" translatable="false">5</string>
    <string name="NUMBER_6" translatable="false">6</string>
    <string name="NUMBER_7" translatable="false">7</string>
    <string name="NUMBER_8" translatable="false">8</string>
    <string name="NUMBER_9" translatable="false">9</string>
    <string name="Comma" translatable="false">.</string>

    <string name="Delete" translatable="false">×</string>
    <string name="Validate" translatable="false">✓</string>

    <!-- activity_score -->
    <string name="ScoreTitle">Score</string>
    <string name="HighScore" translatable="false">%1$s</string>
    <string name="ListScoreTitle">Liste des scores</string>
    <string name="ActivityScoreText" translatable="false">%1$s</string>


    <!-- activity_about -->
    <string name="AboutTitle">A propos</string>
    <string name="AboutText">Cette application a été réalisée par Antoine COUTREEL et Antoine PISSON dans le cadre d\'un projet de développement mobile. Elle a pour but de proposer un jeu de calcul mental.</string>
    <string name="AboutText2">Tous droits réservés. Version 1.0 – 2024</string>
    <string name="AboutTitleFeature">Liste des fonctionnalités</string>
    <string name="AboutTextFeature">- Multilingue (FR + EN).</string>
    <string name="AboutTextFeature2">- Interface utilisateur simple et intuitive.</string>
    <string name="AboutTextFeature3">- Jeu de calcul mental</string>
    <string name="AboutTextFeature4">- Liste des scores</string>

</resources>