<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20px"
        android:background="@color/grey_transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:text="@string/Pseudo"
            android:textColor="#E1EEFB"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/InputPseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="12"
            android:text="@string/PseudoName"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/PlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PlayButton"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ScoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ScoreButton"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/AboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AboutButton"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>