<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textAboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/grey_transparent"
            android:padding="5dp"
            android:text="@string/AboutTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/grey_transparent"
            android:padding="15dp"
            android:text="@string/AboutText"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewTitleFeature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/grey_transparent"
            android:padding="15dp"
            android:text="@string/AboutTitleFeature"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textViewFeature1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_transparent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/AboutTextFeature"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewFeature2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/grey_transparent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/AboutTextFeature2"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>