<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:scrollbarSize="25sp"
    tools:context=".ScoreActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/textScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="5dp"
                android:text="@string/ScoreTitle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textHighScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="15dp"
                android:text="@string/HighScore"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textListScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="15dp"
                android:text="@string/ListScoreTitle"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textScores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="15dp"
                android:text="@string/ActivityScoreText"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>